# TestProject

./: log.txt
ILS/: CMakeLists.txt  ILS_Defines.h  ILS_Logger.h  ILS_LoggerStream.h  ILS_StdLog.h  main.cpp
